error found while trying to instantiating BusDetail() object. Trial 3